# tender-monitor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_05_08_0853-e868188e7f74_initial_schema.py  2026_05_20_1900-ffa97ec39d69_email_recipients.py  2026_06_12_1200-6af0d38a8f3b_tender_title_translations.py  2026_06_18_1200-a451d79b6b2a_share_contacts.py  2026_06_19_1200-d4c5b6a79801_team_members_and_tender_likes.py  2026_06_25_1200-b8c9d0e1f2a3_remove_uzbekistan_tenders_source.py  2026_06_25_1230-c9d0e1f2a3b4_remove_tendersinfo_source.py  2026_06_25_1330-d0e1f2a3b4c5_delete_unmatched_tenders.py
config/: keywords.yaml  sources.yaml
deploy/: README.md  install.sh
deploy/systemd/: tender-monitor-api.service  tender-monitor-scheduler.service
scripts/: inspect_consolidation.py  rename_goszakup_to_zakup_unified.py  seed_sources.py  smoke_translate_pa.py
src/tender_monitor/: cli.py  likes.py  team.py  translation.py
src/tender_monitor/api/: app.py  deps.py  queries.py  templating.py
src/tender_monitor/api/routes/: __init__.py  api.py  settings.py  web.py
src/tender_monitor/api/templates/: _filters.html  base.html
src/tender_monitor/api/templates/settings/: recipients.html
src/tender_monitor/api/templates/tenders/: _card.html  _ets_tender_detail.html  _goszakup_detail.html  _like_control.html  _liked_results.html  _mitwork_detail.html  _national_bank_detail.html  _results.html  _samruk_kazyna_detail.html  _tendersinfo_detail.html  _uzbekistan_tenders_detail.html  _uzex_detail.html  _xt_xarid_detail.html  _zakup_unified_detail.html  detail.html  liked.html  list.html
src/tender_monitor/connectors/: __init__.py  _browser_samruk.py  _html.py  base.py  errors.py  ets_tender.py  goszakup.py  http.py  mitwork.py  national_bank.py  registry.py  samruk_kazyna.py  tendersinfo.py  uzbekistan_tenders.py  uzex_etender.py  xt_xarid.py  zakup_unified.py
src/tender_monitor/core/: config.py  database.py  enums.py  logging.py  models.py  schemas.py
src/tender_monitor/matching/: __init__.py  keywords.py
src/tender_monitor/notifications/: __init__.py  dispatcher.py  email.py  share.py
src/tender_monitor/notifications/templates/: tender_match.html  tender_match.txt  tender_share.html  tender_share.txt
src/tender_monitor/scheduler/: __init__.py  ingest.py  runner.py  seed.py  upsert.py
tests/: conftest.py  test_scheduler_runner.py  test_translation.py
tests/api/: conftest.py  test_queries.py  test_routes.py  test_settings_routes.py  test_templating.py
tests/connectors/: conftest.py  test_base.py  test_ets_tender.py  test_goszakup.py  test_html.py  test_http.py  test_mitwork.py  test_national_bank.py  test_registry.py  test_samruk_kazyna.py  test_tendersinfo.py  test_uzbekistan_tenders.py  test_uzex_etender.py  test_xt_xarid.py  test_zakup_unified.py
tests/core/: test_models.py  test_schemas.py  test_team.py
tests/fixtures/_fake/: listing.json
tests/fixtures/ets_tender/: listing.html  tender_2085996.html
tests/fixtures/goszakup/: announce_17013627.html  listing.html
tests/fixtures/mitwork/: buy_192049.html  listing.html
tests/fixtures/national_bank/: listing.html  lot_228344.html
tests/fixtures/samruk_kazyna/: advert_1220290.json  advert_1220395.json  listing.json  lots_1220290.json  lots_1220395.json
tests/fixtures/tendersinfo/: listing_kz.json  listing_uz.json
tests/fixtures/uzbekistan_tenders/: listing.html
tests/fixtures/uzex_etender/: detail_482604.json  detail_484751.json  listing.json
tests/fixtures/xt_xarid/: listing.json
tests/fixtures/zakup_unified/: announcement_39385974.json  listing.json
tests/matching/: test_keywords.py
tests/notifications/: test_dispatcher.py
tests/scheduler/: conftest.py  test_ingest.py  test_upsert.py
