[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-monitor"
version = "0.1.0"
description = "Monitors public procurement tender platforms in Kazakhstan and Uzbekistan, filters by ESG/credit-rating keywords, notifies via Telegram and email."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Finvizier" },
]
dependencies = [
    "httpx==0.27.2",
    "selectolax==0.3.21",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pyyaml==6.0.2",
    "apscheduler==3.11.0",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-telegram-bot==21.9",
    "aiosmtplib==3.0.2",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "anthropic==0.42.0",
    "rapidfuzz==3.10.1",
    "pymorphy3==2.0.3",
    "structlog==24.4.0",
    "click==8.1.8",
    "tenacity==9.0.0",
    "requests==2.34.0",
    "truststore==0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
tender-monitor = "tender_monitor.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tender_monitor = [
    "py.typed",
    "api/templates/**/*.html",
    "api/static/**/*",
    "notifications/templates/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    # We deliberately inherit from (str, Enum) on every enum for
    # Pydantic v2 + JSON-serializability. Migrating to StrEnum changes
    # str(member) from "EnumName.value" to "value", which would silently
    # break downstream consumers — not worth a stylistic lint.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends() / Query() in argument defaults is the idiomatic
# pattern; B008 fights the framework, so allow it inside route modules.
"src/tender_monitor/api/routes/*.py" = ["B008"]
"alembic/env.py" = ["E402"]
"alembic/versions/*.py" = ["E402", "N999"]
# Matching tests intentionally use Cyrillic strings whose individual
# letters look like Latin (АКРА, РА, etc.). That's the actual data; the
# ambiguous-letter lint just gets in the way here.
"tests/matching/*.py" = ["RUF001", "RUF003"]
# MITWORK emits Russian no-break / narrow-no-break spaces as thousands
# separators inside amount strings; the connector intentionally keeps
# those characters as data, not typos.
"src/tender_monitor/connectors/mitwork.py" = ["RUF001", "RUF002", "RUF003"]
"src/tender_monitor/connectors/_html.py" = ["RUF001", "RUF002", "RUF003"]
# The MITWORK tests inline HTML fixtures that contain Cyrillic + the
# same no-break spaces — same exemption as the production module.
"tests/connectors/test_mitwork.py" = ["RUF001", "RUF002", "RUF003"]
# Goszakup test fixtures inline Cyrillic HTML strings ("ЗЦП1" etc.);
# the ambiguous-letter lint is noise here. test_html.py uses literal
# NBSP/narrow-NBSP characters on purpose to pin parser behavior.
"tests/connectors/test_goszakup.py" = ["RUF001", "RUF002", "RUF003"]
"tests/connectors/test_html.py" = ["RUF001", "RUF002", "RUF003"]
# National Bank: connector code + tests carry Cyrillic field labels
# verbatim (the schema map IS the data); same exemption applies.
"src/tender_monitor/connectors/national_bank.py" = ["RUF001", "RUF002", "RUF003"]
"tests/connectors/test_national_bank.py" = ["RUF001", "RUF002", "RUF003"]
# ETS-Tender: Cyrillic detail-page labels + the "Скрыто" / "тенге"
# sentinels live in code as data; tests inline Cyrillic listing HTML
# fixtures.
"src/tender_monitor/connectors/ets_tender.py" = ["RUF001", "RUF002", "RUF003"]
"tests/connectors/test_ets_tender.py" = ["RUF001", "RUF002", "RUF003"]
# UZEX e-Tender: tests inline bilingual ru/uz Cyrillic titles + buyer
# names; the actual data carries ambiguous Cyrillic letters.
"tests/connectors/test_uzex_etender.py" = ["RUF001", "RUF002", "RUF003"]
# XT-Xarid: status sentinels + good_maps names + buyer-name strings
# in source/tests carry ambiguous Cyrillic letters (Latin-look-alikes).
"src/tender_monitor/connectors/xt_xarid.py" = ["RUF001", "RUF002", "RUF003"]
"tests/connectors/test_xt_xarid.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["tender_monitor"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "selectolax.*",
    "pymorphy3.*",
    "apscheduler.*",
    "aiosmtplib.*",
]
ignore_missing_imports = true
